force-app/main/default/objects/BillingEvent__c/BillingEvent__c.object-meta.xml
<CustomObject>
    <label>Billing Event</label>
    <nameField>
        <displayFormat>BE-{00000}</displayFormat>
        <label>Billing Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>