force-app/main/default/objects/BillingEvent__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Account_Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>