force-app/main/default/objects/BillingEvent__c/fields/Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Date__c</fullName>
    <label>Odoo Acknowledged Timestamp</label>
    <type>DateTime</type>
</CustomField>