force-app/main/default/objects/BillingEvent__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <inlineHelpText>Total amount collected from customer. Set by IP-5 invoice sync. Payment_Status__c derived from this vs Invoice_Amount__c.</inlineHelpText>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>