force-app/main/default/objects/BillingEvent__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Asset_Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>