force-app/main/default/objects/BillingEvent__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <inlineHelpText>Outstanding balance (Invoice_Amount - Amount_Paid). Set by IP-5 invoice sync.</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>