force-app/main/default/objects/BillingEvent__c/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Billing_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>