force-app/main/default/objects/BillingEvent__c/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(SCD__c)), NOT(ISBLANK(Order__r.RDD__c))), IF(SCD__c &gt; Order__r.RDD__c, SCD__c, Order__r.RDD__c), IF(NOT(ISBLANK(SCD__c)), SCD__c, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>