force-app/main/default/objects/BillingEvent__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Price Change</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>