force-app/main/default/objects/BillingEvent__c/fields/Credit_Note_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Amount__c</fullName>
    <inlineHelpText>Credit note amount applied to this invoice. Set by IP-5 invoice sync. Nullable.</inlineHelpText>
    <label>Credit Note Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>