force-app/main/default/objects/BillingEvent__c/fields/Credit_Note_Reference__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Reference__c</fullName>
    <label>Credit Note Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>