force-app/main/default/objects/BillingEvent__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Payment due date from Odoo invoice. Used to derive Overdue status when today &gt; due_date and balance &gt; 0.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>