force-app/main/default/objects/BillingEvent__c/fields/Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Date__c</fullName>
    <label>Eligible Date</label>
    <type>Date</type>
</CustomField>