force-app/main/default/objects/BillingEvent__c/fields/ETF_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETF_Amount__c</fullName>
    <label>ETF Amount (USD)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>