force-app/main/default/objects/BillingEvent__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Service</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Partial Churn</fullName>
            </value>
            <value>
                <fullName>Ramp Activation</fullName>
            </value>
            <value>
                <fullName>NRC</fullName>
            </value>
            <value>
                <fullName>Security Deposit Refund</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Resumption</fullName>
            </value>
            <value>
                <fullName>Price Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>