force-app/main/default/objects/BillingEvent__c/fields/Export_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Export_Batch_Id__c</fullName>
    <label>Export Batch ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>