force-app/main/default/objects/BillingEvent__c/fields/Export_Status__c.field-meta.xml
<CustomField>
    <fullName>Export_Status__c</fullName>
    <label>Export Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Exported</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>