force-app/main/default/objects/BillingEvent__c/fields/External_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Invoice_Id__c</fullName>
    <label>Odoo Invoice Internal ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>