force-app/main/default/objects/BillingEvent__c/fields/Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Free_Months__c</fullName>
    <label>Free Months Remaining</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>