force-app/main/default/objects/BillingEvent__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <inlineHelpText>Total invoiced amount from Odoo. Set by IP-5 invoice sync.</inlineHelpText>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>