force-app/main/default/objects/BillingEvent__c/fields/Last_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Last_Error_Code__c</fullName>
    <label>Last HTTP Error Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>