force-app/main/default/objects/BillingEvent__c/fields/MRC_Amount__c.field-meta.xml
<CustomField>
    <fullName>MRC_Amount__c</fullName>
    <label>MRC Amount (BAN Currency)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>