force-app/main/default/objects/BillingEvent__c/fields/NRC_Amount__c.field-meta.xml
<CustomField>
    <fullName>NRC_Amount__c</fullName>
    <label>NRC Amount (BAN Currency)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>