force-app/main/default/objects/BillingEvent__c/fields/Odoo_BillingEvent_Id__c.field-meta.xml
<CustomField>
    <fullName>Odoo_BillingEvent_Id__c</fullName>
    <externalId>true</externalId>
    <label>Odoo Billing Event ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>