force-app/main/default/objects/BillingEvent__c/fields/Odoo_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Line_ID__c</fullName>
    <label>Odoo Line Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>