force-app/main/default/objects/BillingEvent__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>