force-app/main/default/objects/BillingEvent__c/fields/Original_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Original_Quantity__c</fullName>
    <label>Original Quantity</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>