force-app/main/default/objects/BillingEvent__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <inlineHelpText>Date of last payment received. Set by IP-5 invoice sync. Nullable - only set when a payment has been made.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>