force-app/main/default/objects/BillingEvent__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Billing System Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1 (Odoo)</fullName>
                <default>true</default>
                <label>Phase 1 (Odoo)</label>
            </value>
            <value>
                <fullName>Phase 2 (NetSuite)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>