force-app/main/default/objects/BillingEvent__c/fields/Prior_MRC__c.field-meta.xml
<CustomField>
    <fullName>Prior_MRC__c</fullName>
    <label>Prior MRC (before change)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>