force-app/main/default/objects/BillingEvent__c/fields/Provisioning_Unit__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Unit__c</fullName>
    <label>Provisioning Unit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>