force-app/main/default/objects/BillingEvent__c/fields/Ramp_Phase__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Phase__c</fullName>
    <label>Ramp Phase</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>