force-app/main/default/objects/BillingEvent__c/fields/RDD__c.field-meta.xml
<CustomField>
    <fullName>RDD__c</fullName>
    <label>RDD</label>
    <type>Date</type>
</CustomField>