force-app/main/default/objects/BillingEvent__c/fields/SCD__c.field-meta.xml
<CustomField>
    <fullName>SCD__c</fullName>
    <label>Service Commencement Date</label>
    <type>Date</type>
</CustomField>