force-app/main/default/objects/BillingEvent__c/fields/SCD_Override_Approved__c.field-meta.xml
<CustomField>
    <fullName>SCD_Override_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCD Override Approved</label>
    <type>Checkbox</type>
</CustomField>