force-app/main/default/objects/BillingEvent__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <label>Sent to Odoo Timestamp</label>
    <type>DateTime</type>
</CustomField>