force-app/main/default/objects/BillingEvent__c/fields/Service_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Commencement_Date__c</fullName>
    <label>Service Commencement Date</label>
    <type>Date</type>
</CustomField>