force-app/main/default/objects/BillingEvent__c/fields/Source_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Change_Type__c</fullName>
    <label>Source Change Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Price_Change</fullName>
                <label>Price Change</label>
            </value>
            <value>
                <fullName>Quantity_Change</fullName>
                <label>Quantity Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>