force-app/main/default/objects/BillingEvent__c/fields/Target_BAN__c.field-meta.xml
<CustomField>
    <fullName>Target_BAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target BAN</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>Billing Events (Target)</relationshipLabel>
    <relationshipName>Target_Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>