force-app/main/default/objects/BillingEvent__c/validationRules/VR_BE_03_OrderImmutable.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_BE_03_OrderImmutable</fullName>
    <active>true</active>
    <description>Parent Order cannot be changed on a BillingEvent after creation.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Order__c))</errorConditionFormula>
    <errorDisplayField>Order__c</errorDisplayField>
    <errorMessage>The parent Order cannot be changed on a BillingEvent.</errorMessage>
</ValidationRule>