force-app/main/default/objects/BillingEvent__c/listViews/All_Billing_Events.listView-meta.xml
<ListView>
    <fullName>All_Billing_Events</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>BAN__c</columns>
    <columns>Order__c</columns>
    <columns>BillingEvent_Status__c</columns>
    <columns>Amount__c</columns>
    <columns>Billing_Period_Start__c</columns>
    <columns>Billing_Period_End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Billing Events</label>
</ListView>