force-app/main/default/objects/BillingEvent__c/listViews/Pending_Export.listView-meta.xml
<ListView>
    <fullName>Pending_Export</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>BAN__c</columns>
    <columns>Order__c</columns>
    <columns>Amount__c</columns>
    <columns>Export_Status__c</columns>
    <columns>Eligible_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Export_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Export</label>
</ListView>